--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,9 @@ button:focus {
 
 #preloader-none {
   opacity: 0;
+  pointer-events: none;
+  z-index: -1;
+  display: none;
 }
 
 #no-scroll {
@@ -77,6 +80,7 @@ button:focus {
 /* --------- */
 .sticky {
   background-color: #1b1a2ea9 !important;
+  z-index: 1050 !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
   backdrop-filter: blur(15px) !important;
@@ -84,6 +88,7 @@ button:focus {
 
 .navbar {
   position: fixed !important;
+  z-index: 1050 !important;
   transition: all 0.3s ease-out 0s !important;
   padding: 0.3rem 2rem !important;
   font-size: 1.2rem !important;
@@ -257,7 +262,6 @@ button:focus {
 
 .home-section {
   position: relative;
-  z-index: -1;
   background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
   background-position: top center;
   background-repeat: no-repeat;
@@ -451,6 +455,7 @@ button:focus {
 /* --------- */
 .project-section {
   position: relative !important;
+  z-index: 0 !important;
   padding-top: 150px !important;
   padding-bottom: 30px !important;
   background-image: var(--image-gradient), url(./Assets/home-bg.jpg) !important;
@@ -549,6 +554,7 @@ button:focus {
 
 .about-section {
   position: relative !important;
+  z-index: 0 !important;
   padding-top: 150px !important;
   padding-bottom: 30px !important;
   background-image: var(--image-gradient), url(./Assets/home-bg.jpg) !important;
@@ -609,6 +615,7 @@ button:focus {
 
 .resume-section {
   position: relative !important;
+  z-index: 0 !important;
   padding-top: 110px !important;
   padding-bottom: 30px !important;
   background-image: var(--image-gradient), url(./Assets/home-bg.jpg) !important;
@@ -745,4 +752,8 @@ button:focus {
 }
 .fork-btn-inner::after {
   display: none !important;
+}
+
+#tsparticles {
+  pointer-events: none !important;
 }
